parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations fundefs instructions
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> <empty>
Rule 4     declaration -> TYPE inits ;
Rule 5     declaration -> error ;
Rule 6     inits -> inits , init
Rule 7     inits -> init
Rule 8     init -> ID = expression
Rule 9     instructions -> instructions instruction
Rule 10    instructions -> instruction
Rule 11    instruction -> print_instr
Rule 12    instruction -> labeled_instr
Rule 13    instruction -> assignment
Rule 14    instruction -> choice_instr
Rule 15    instruction -> while_instr
Rule 16    instruction -> repeat_instr
Rule 17    instruction -> return_instr
Rule 18    instruction -> break_instr
Rule 19    instruction -> continue_instr
Rule 20    instruction -> compound_instr
Rule 21    print_instr -> PRINT expression ;
Rule 22    print_instr -> PRINT error ;
Rule 23    labeled_instr -> ID : instruction
Rule 24    assignment -> ID = expression ;
Rule 25    choice_instr -> IF ( condition ) instruction
Rule 26    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 27    choice_instr -> IF ( error ) instruction
Rule 28    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 29    while_instr -> WHILE ( condition ) instruction
Rule 30    while_instr -> WHILE ( error ) instruction
Rule 31    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 32    return_instr -> RETURN expression ;
Rule 33    continue_instr -> CONTINUE ;
Rule 34    break_instr -> BREAK ;
Rule 35    compound_instr -> { declarations instructions }
Rule 36    condition -> expression
Rule 37    const -> INTEGER
Rule 38    const -> FLOAT
Rule 39    const -> STRING
Rule 40    expression -> const
Rule 41    expression -> ID
Rule 42    expression -> expression + expression
Rule 43    expression -> expression - expression
Rule 44    expression -> expression * expression
Rule 45    expression -> expression / expression
Rule 46    expression -> expression % expression
Rule 47    expression -> expression | expression
Rule 48    expression -> expression & expression
Rule 49    expression -> expression ^ expression
Rule 50    expression -> expression AND expression
Rule 51    expression -> expression OR expression
Rule 52    expression -> expression SHL expression
Rule 53    expression -> expression SHR expression
Rule 54    expression -> expression EQ expression
Rule 55    expression -> expression NEQ expression
Rule 56    expression -> expression > expression
Rule 57    expression -> expression < expression
Rule 58    expression -> expression LE expression
Rule 59    expression -> expression GE expression
Rule 60    expression -> ( expression )
Rule 61    expression -> ( error )
Rule 62    expression -> ID ( expr_list_or_empty )
Rule 63    expression -> ID ( error )
Rule 64    expr_list_or_empty -> expr_list
Rule 65    expr_list_or_empty -> <empty>
Rule 66    expr_list -> expr_list , expression
Rule 67    expr_list -> expression
Rule 68    fundefs -> fundef fundefs
Rule 69    fundefs -> <empty>
Rule 70    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 71    args_list_or_empty -> args_list
Rule 72    args_list_or_empty -> <empty>
Rule 73    args_list -> args_list , arg
Rule 74    args_list -> arg
Rule 75    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 46
&                    : 48
(                    : 25 26 27 28 29 30 60 61 62 63 70
)                    : 25 26 27 28 29 30 60 61 62 63 70
*                    : 44
+                    : 42
,                    : 6 66 73
-                    : 43
/                    : 45
:                    : 23
;                    : 4 5 21 22 24 31 32 33 34
<                    : 57
=                    : 8 24
>                    : 56
AND                  : 50
BREAK                : 34
CONTINUE             : 33
ELSE                 : 26 28
EQ                   : 54
FLOAT                : 38
GE                   : 59
ID                   : 8 23 24 41 62 63 70 75
IF                   : 25 26 27 28
INTEGER              : 37
LE                   : 58
NEQ                  : 55
OR                   : 51
PRINT                : 21 22
REPEAT               : 31
RETURN               : 32
SHL                  : 52
SHR                  : 53
STRING               : 39
TYPE                 : 4 70 75
UNTIL                : 31
WHILE                : 29 30
^                    : 49
error                : 5 22 27 28 30 61 63
{                    : 35
|                    : 47
}                    : 35

Nonterminals, with rules where they appear

arg                  : 73 74
args_list            : 71 73
args_list_or_empty   : 70
assignment           : 13
break_instr          : 18
choice_instr         : 14
compound_instr       : 20 70
condition            : 25 26 29 31
const                : 40
continue_instr       : 19
declaration          : 2
declarations         : 1 2 35
expr_list            : 64 66
expr_list_or_empty   : 62
expression           : 8 21 24 32 36 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 66 67
fundef               : 68
fundefs              : 1 68
init                 : 6 7
inits                : 4 6
instruction          : 9 10 23 25 26 26 27 28 28 29 30
instructions         : 1 9 31 35
labeled_instr        : 12
print_instr          : 11
program              : 0
repeat_instr         : 16
return_instr         : 17
while_instr          : 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations fundefs instructions
    (2) declarations -> . declarations declaration
    (3) declarations -> .

    TYPE            reduce using rule 3 (declarations -> .)
    error           reduce using rule 3 (declarations -> .)
    PRINT           reduce using rule 3 (declarations -> .)
    ID              reduce using rule 3 (declarations -> .)
    IF              reduce using rule 3 (declarations -> .)
    WHILE           reduce using rule 3 (declarations -> .)
    REPEAT          reduce using rule 3 (declarations -> .)
    RETURN          reduce using rule 3 (declarations -> .)
    BREAK           reduce using rule 3 (declarations -> .)
    CONTINUE        reduce using rule 3 (declarations -> .)
    {               reduce using rule 3 (declarations -> .)

    program                        shift and go to state 1
    declarations                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations . fundefs instructions
    (2) declarations -> declarations . declaration
    (68) fundefs -> . fundef fundefs
    (69) fundefs -> .
    (4) declaration -> . TYPE inits ;
    (5) declaration -> . error ;
    (70) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

    PRINT           reduce using rule 69 (fundefs -> .)
    ID              reduce using rule 69 (fundefs -> .)
    IF              reduce using rule 69 (fundefs -> .)
    WHILE           reduce using rule 69 (fundefs -> .)
    REPEAT          reduce using rule 69 (fundefs -> .)
    RETURN          reduce using rule 69 (fundefs -> .)
    BREAK           reduce using rule 69 (fundefs -> .)
    CONTINUE        reduce using rule 69 (fundefs -> .)
    {               reduce using rule 69 (fundefs -> .)
    TYPE            shift and go to state 7
    error           shift and go to state 3

    fundefs                        shift and go to state 4
    fundef                         shift and go to state 5
    declaration                    shift and go to state 6

state 3

    (5) declaration -> error . ;

    ;               shift and go to state 8


state 4

    (1) program -> declarations fundefs . instructions
    (9) instructions -> . instructions instruction
    (10) instructions -> . instruction
    (11) instruction -> . print_instr
    (12) instruction -> . labeled_instr
    (13) instruction -> . assignment
    (14) instruction -> . choice_instr
    (15) instruction -> . while_instr
    (16) instruction -> . repeat_instr
    (17) instruction -> . return_instr
    (18) instruction -> . break_instr
    (19) instruction -> . continue_instr
    (20) instruction -> . compound_instr
    (21) print_instr -> . PRINT expression ;
    (22) print_instr -> . PRINT error ;
    (23) labeled_instr -> . ID : instruction
    (24) assignment -> . ID = expression ;
    (25) choice_instr -> . IF ( condition ) instruction
    (26) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (27) choice_instr -> . IF ( error ) instruction
    (28) choice_instr -> . IF ( error ) instruction ELSE instruction
    (29) while_instr -> . WHILE ( condition ) instruction
    (30) while_instr -> . WHILE ( error ) instruction
    (31) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (32) return_instr -> . RETURN expression ;
    (34) break_instr -> . BREAK ;
    (33) continue_instr -> . CONTINUE ;
    (35) compound_instr -> . { declarations instructions }

    PRINT           shift and go to state 12
    ID              shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 18
    RETURN          shift and go to state 10
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 28
    {               shift and go to state 29

    return_instr                   shift and go to state 14
    assignment                     shift and go to state 19
    instruction                    shift and go to state 9
    compound_instr                 shift and go to state 21
    continue_instr                 shift and go to state 15
    labeled_instr                  shift and go to state 20
    print_instr                    shift and go to state 27
    choice_instr                   shift and go to state 11
    break_instr                    shift and go to state 24
    while_instr                    shift and go to state 16
    repeat_instr                   shift and go to state 13
    instructions                   shift and go to state 17

state 5

    (68) fundefs -> fundef . fundefs
    (68) fundefs -> . fundef fundefs
    (69) fundefs -> .
    (70) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr

    PRINT           reduce using rule 69 (fundefs -> .)
    ID              reduce using rule 69 (fundefs -> .)
    IF              reduce using rule 69 (fundefs -> .)
    WHILE           reduce using rule 69 (fundefs -> .)
    REPEAT          reduce using rule 69 (fundefs -> .)
    RETURN          reduce using rule 69 (fundefs -> .)
    BREAK           reduce using rule 69 (fundefs -> .)
    CONTINUE        reduce using rule 69 (fundefs -> .)
    {               reduce using rule 69 (fundefs -> .)
    TYPE            shift and go to state 31

    fundefs                        shift and go to state 30
    fundef                         shift and go to state 5

state 6

    (2) declarations -> declarations declaration .

    TYPE            reduce using rule 2 (declarations -> declarations declaration .)
    error           reduce using rule 2 (declarations -> declarations declaration .)
    PRINT           reduce using rule 2 (declarations -> declarations declaration .)
    ID              reduce using rule 2 (declarations -> declarations declaration .)
    IF              reduce using rule 2 (declarations -> declarations declaration .)
    WHILE           reduce using rule 2 (declarations -> declarations declaration .)
    REPEAT          reduce using rule 2 (declarations -> declarations declaration .)
    RETURN          reduce using rule 2 (declarations -> declarations declaration .)
    BREAK           reduce using rule 2 (declarations -> declarations declaration .)
    CONTINUE        reduce using rule 2 (declarations -> declarations declaration .)
    {               reduce using rule 2 (declarations -> declarations declaration .)


state 7

    (4) declaration -> TYPE . inits ;
    (70) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr
    (6) inits -> . inits , init
    (7) inits -> . init
    (8) init -> . ID = expression

    ID              shift and go to state 34

    init                           shift and go to state 32
    inits                          shift and go to state 33

state 8

    (5) declaration -> error ; .

    TYPE            reduce using rule 5 (declaration -> error ; .)
    error           reduce using rule 5 (declaration -> error ; .)
    PRINT           reduce using rule 5 (declaration -> error ; .)
    ID              reduce using rule 5 (declaration -> error ; .)
    IF              reduce using rule 5 (declaration -> error ; .)
    WHILE           reduce using rule 5 (declaration -> error ; .)
    REPEAT          reduce using rule 5 (declaration -> error ; .)
    RETURN          reduce using rule 5 (declaration -> error ; .)
    BREAK           reduce using rule 5 (declaration -> error ; .)
    CONTINUE        reduce using rule 5 (declaration -> error ; .)
    {               reduce using rule 5 (declaration -> error ; .)


state 9

    (10) instructions -> instruction .

    }               reduce using rule 10 (instructions -> instruction .)
    PRINT           reduce using rule 10 (instructions -> instruction .)
    ID              reduce using rule 10 (instructions -> instruction .)
    IF              reduce using rule 10 (instructions -> instruction .)
    WHILE           reduce using rule 10 (instructions -> instruction .)
    REPEAT          reduce using rule 10 (instructions -> instruction .)
    RETURN          reduce using rule 10 (instructions -> instruction .)
    BREAK           reduce using rule 10 (instructions -> instruction .)
    CONTINUE        reduce using rule 10 (instructions -> instruction .)
    {               reduce using rule 10 (instructions -> instruction .)
    $end            reduce using rule 10 (instructions -> instruction .)
    UNTIL           reduce using rule 10 (instructions -> instruction .)


state 10

    (32) return_instr -> RETURN . expression ;
    (40) expression -> . const
    (41) expression -> . ID
    (42) expression -> . expression + expression
    (43) expression -> . expression - expression
    (44) expression -> . expression * expression
    (45) expression -> . expression / expression
    (46) expression -> . expression % expression
    (47) expression -> . expression | expression
    (48) expression -> . expression & expression
    (49) expression -> . expression ^ expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . expression SHL expression
    (53) expression -> . expression SHR expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NEQ expression
    (56) expression -> . expression > expression
    (57) expression -> . expression < expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression GE expression
    (60) expression -> . ( expression )
    (61) expression -> . ( error )
    (62) expression -> . ID ( expr_list_or_empty )
    (63) expression -> . ID ( error )
    (37) const -> . INTEGER
    (38) const -> . FLOAT
    (39) const -> . STRING

    ID              shift and go to state 38
    (               shift and go to state 40
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 39
    STRING          shift and go to state 37

    const                          shift and go to state 35
    expression                     shift and go to state 41

state 11

    (14) instruction -> choice_instr .

    PRINT           reduce using rule 14 (instruction -> choice_instr .)
    ID              reduce using rule 14 (instruction -> choice_instr .)
    IF              reduce using rule 14 (instruction -> choice_instr .)
    WHILE           reduce using rule 14 (instruction -> choice_instr .)
    REPEAT          reduce using rule 14 (instruction -> choice_instr .)
    RETURN          reduce using rule 14 (instruction -> choice_instr .)
    BREAK           reduce using rule 14 (instruction -> choice_instr .)
    CONTINUE        reduce using rule 14 (instruction -> choice_instr .)
    {               reduce using rule 14 (instruction -> choice_instr .)
    $end            reduce using rule 14 (instruction -> choice_instr .)
    UNTIL           reduce using rule 14 (instruction -> choice_instr .)
    }               reduce using rule 14 (instruction -> choice_instr .)
    ELSE            reduce using rule 14 (instruction -> choice_instr .)


state 12

    (21) print_instr -> PRINT . expression ;
    (22) print_instr -> PRINT . error ;
    (40) expression -> . const
    (41) expression -> . ID
    (42) expression -> . expression + expression
    (43) expression -> . expression - expression
    (44) expression -> . expression * expression
    (45) expression -> . expression / expression
    (46) expression -> . expression % expression
    (47) expression -> . expression | expression
    (48) expression -> . expression & expression
    (49) expression -> . expression ^ expression
    (50) expression -> . expression AND expression
    (51) expression -> . expression OR expression
    (52) expression -> . expression SHL expression
    (53) expression -> . expression SHR expression
    (54) expression -> . expression EQ expression
    (55) expression -> . expression NEQ expression
    (56) expression -> . expression > expression
    (57) expression -> . expression < expression
    (58) expression -> . expression LE expression
    (59) expression -> . expression GE expression
    (60) expression -> . ( expression )
    (61) expression -> . ( error )
    (62) expression -> . ID ( expr_list_or_empty )
    (63) expression -> . ID ( error )
    (37) const -> . INTEGER
    (38) const -> . FLOAT
    (39) const -> . STRING

    error           shift and go to state 42
    ID              shift and go to state 38
    (               shift and go to state 40
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 39
    STRING          shift and go to state 37

    const                          shift and go to state 35
    expression                     shift and go to state 43

state 13

    (16) instruction -> repeat_instr .

    PRINT           reduce using rule 16 (instruction -> repeat_instr .)
    ID              reduce using rule 16 (instruction -> repeat_instr .)
    IF              reduce using rule 16 (instruction -> repeat_instr .)
    WHILE           reduce using rule 16 (instruction -> repeat_instr .)
    REPEAT          reduce using rule 16 (instruction -> repeat_instr .)
    RETURN          reduce using rule 16 (instruction -> repeat_instr .)
    BREAK           reduce using rule 16 (instruction -> repeat_instr .)
    CONTINUE        reduce using rule 16 (instruction -> repeat_instr .)
    {               reduce using rule 16 (instruction -> repeat_instr .)
    $end            reduce using rule 16 (instruction -> repeat_instr .)
    UNTIL           reduce using rule 16 (instruction -> repeat_instr .)
    }               reduce using rule 16 (instruction -> repeat_instr .)
    ELSE            reduce using rule 16 (instruction -> repeat_instr .)


state 14

    (17) instruction -> return_instr .

    PRINT           reduce using rule 17 (instruction -> return_instr .)
    ID              reduce using rule 17 (instruction -> return_instr .)
    IF              reduce using rule 17 (instruction -> return_instr .)
    WHILE           reduce using rule 17 (instruction -> return_instr .)
    REPEAT          reduce using rule 17 (instruction -> return_instr .)
    RETURN          reduce using rule 17 (instruction -> return_instr .)
    BREAK           reduce using rule 17 (instruction -> return_instr .)
    CONTINUE        reduce using rule 17 (instruction -> return_instr .)
    {               reduce using rule 17 (instruction -> return_instr .)
    $end            reduce using rule 17 (instruction -> return_instr .)
    UNTIL           reduce using rule 17 (instruction -> return_instr .)
    }               reduce using rule 17 (instruction -> return_instr .)
    ELSE            reduce using rule 17 (instruction -> return_instr .)


state 15

    (19) instruction -> continue_instr .

    PRINT           reduce using rule 19 (instruction -> continue_instr .)
    ID              reduce using rule 19 (instruction -> continue_instr .)
    IF              reduce using rule 19 (instruction -> continue_instr .)
    WHILE           reduce using rule 19 (instruction -> continue_instr .)
    REPEAT          reduce using rule 19 (instruction -> continue_instr .)
    RETURN          reduce using rule 19 (instruction -> continue_instr .)
    BREAK           reduce using rule 19 (instruction -> continue_instr .)
    CONTINUE        reduce using rule 19 (instruction -> continue_instr .)
    {               reduce using rule 19 (instruction -> continue_instr .)
    $end            reduce using rule 19 (instruction -> continue_instr .)
    UNTIL           reduce using rule 19 (instruction -> continue_instr .)
    }               reduce using rule 19 (instruction -> continue_instr .)
    ELSE            reduce using rule 19 (instruction -> continue_instr .)


state 16

    (15) instruction -> while_instr .

    PRINT           reduce using rule 15 (instruction -> while_instr .)
    ID              reduce using rule 15 (instruction -> while_instr .)
    IF              reduce using rule 15 (instruction -> while_instr .)
    WHILE           reduce using rule 15 (instruction -> while_instr .)
    REPEAT          reduce using rule 15 (instruction -> while_instr .)
    RETURN          reduce using rule 15 (instruction -> while_instr .)
    BREAK           reduce using rule 15 (instruction -> while_instr .)
    CONTINUE        reduce using rule 15 (instruction -> while_instr .)
    {               reduce using rule 15 (instruction -> while_instr .)
    $end            reduce using rule 15 (instruction -> while_instr .)
    UNTIL           reduce using rule 15 (instruction -> while_instr .)
    }               reduce using rule 15 (instruction -> while_instr .)
    ELSE            reduce using rule 15 (instruction -> while_instr .)


state 17

    (1) program -> declarations fundefs instructions .
    (9) instructions -> instructions . instruction
    (11) instruction -> . print_instr
    (12) instruction -> . labeled_instr
    (13) instruction -> . assignment
    (14) instruction -> . choice_instr
    (15) instruction -> . while_instr
    (16) instruction -> . repeat_instr
    (17) instruction -> . return_instr
    (18) instruction -> . break_instr
    (19) instruction -> . continue_instr
    (20) instruction -> . compound_instr
    (21) print_instr -> . PRINT expression ;
    (22) print_instr -> . PRINT error ;
    (23) labeled_instr -> . ID : instruction
    (24) assignment -> . ID = expression ;
    (25) choice_instr -> . IF ( condition ) instruction
    (26) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (27) choice_instr -> . IF ( error ) instruction
    (28) choice_instr -> . IF ( error ) instruction ELSE instruction
    (29) while_instr -> . WHILE ( condition ) instruction
    (30) while_instr -> . WHILE ( error ) instruction
    (31) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (32) return_instr -> . RETURN expression ;
    (34) break_instr -> . BREAK ;
    (33) continue_instr -> . CONTINUE ;
    (35) compound_instr -> . { declarations instructions }

    $end            reduce using rule 1 (program -> declarations fundefs instructions .)
    PRINT           shift and go to state 12
    ID              shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 18
    RETURN          shift and go to state 10
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 28
    {               shift and go to state 29

    return_instr                   shift and go to state 14
    assignment                     shift and go to state 19
    instruction                    shift and go to state 44
    compound_instr                 shift and go to state 21
    continue_instr                 shift and go to state 15
    labeled_instr                  shift and go to state 20
    print_instr                    shift and go to state 27
    choice_instr                   shift and go to state 11
    break_instr                    shift and go to state 24
    while_instr                    shift and go to state 16
    repeat_instr                   shift and go to state 13

state 18

    (31) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (9) instructions -> . instructions instruction
    (10) instructions -> . instruction
    (11) instruction -> . print_instr
    (12) instruction -> . labeled_instr
    (13) instruction -> . assignment
    (14) instruction -> . choice_instr
    (15) instruction -> . while_instr
    (16) instruction -> . repeat_instr
    (17) instruction -> . return_instr
    (18) instruction -> . break_instr
    (19) instruction -> . continue_instr
    (20) instruction -> . compound_instr
    (21) print_instr -> . PRINT expression ;
    (22) print_instr -> . PRINT error ;
    (23) labeled_instr -> . ID : instruction
    (24) assignment -> . ID = expression ;
    (25) choice_instr -> . IF ( condition ) instruction
    (26) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (27) choice_instr -> . IF ( error ) instruction
    (28) choice_instr -> . IF ( error ) instruction ELSE instruction
    (29) while_instr -> . WHILE ( condition ) instruction
    (30) while_instr -> . WHILE ( error ) instruction
    (31) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (32) return_instr -> . RETURN expression ;
    (34) break_instr -> . BREAK ;
    (33) continue_instr -> . CONTINUE ;
    (35) compound_instr -> . { declarations instructions }

    PRINT           shift and go to state 12
    ID              shift and go to state 22
    IF              shift and go to state 23
    WHILE           shift and go to state 25
    REPEAT          shift and go to state 18
    RETURN          shift and go to state 10
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 28
    {               shift and go to state 29

    return_instr                   shift and go to state 14
    assignment                     shift and go to state 19
    instruction                    shift and go to state 9
    compound_instr                 shift and go to state 21
    continue_instr                 shift and go to state 15
    labeled_instr                  shift and go to state 20
    print_instr                    shift and go to state 27
    choice_instr                   shift and go to state 11
    repeat_instr                   shift and go to state 13
    break_instr                    shift and go to state 24
    while_instr                    shift and go to state 16
    instructions                   shift and go to state 45

state 19

    (13) instruction -> assignment .

    PRINT           reduce using rule 13 (instruction -> assignment .)
    ID              reduce using rule 13 (instruction -> assignment .)
    IF              reduce using rule 13 (instruction -> assignment .)
    WHILE           reduce using rule 13 (instruction -> assignment .)
    REPEAT          reduce using rule 13 (instruction -> assignment .)
    RETURN          reduce using rule 13 (instruction -> assignment .)
    BREAK           reduce using rule 13 (instruction -> assignment .)
    CONTINUE        reduce using rule 13 (instruction -> assignment .)
    {               reduce using rule 13 (instruction -> assignment .)
    $end            reduce using rule 13 (instruction -> assignment .)
    UNTIL           reduce using rule 13 (instruction -> assignment .)
    }               reduce using rule 13 (instruction -> assignment .)
    ELSE            reduce using rule 13 (instruction -> assignment .)


state 20

    (12) instruction -> labeled_instr .

    PRINT           reduce using rule 12 (instruction -> labeled_instr .)
    ID              reduce using rule 12 (instruction -> labeled_instr .)
    IF              reduce using rule 12 (instruction -> labeled_instr .)
    WHILE           reduce using rule 12 (instruction -> labeled_instr .)
    REPEAT          reduce using rule 12 (instruction -> labeled_instr .)
    RETURN          reduce using rule 12 (instruction -> labeled_instr .)
    BREAK           reduce using rule 12 (instruction -> labeled_instr .)
    CONTINUE        reduce using rule 12 (instruction -> labeled_instr .)
    {               reduce using rule 12 (instruction -> labeled_instr .)
    $end            reduce using rule 12 (instruction -> labeled_instr .)
    UNTIL           reduce using rule 12 (instruction -> labeled_instr .)
    }               reduce using rule 12 (instruction -> labeled_instr .)
    ELSE            reduce using rule 12 (instruction -> labeled_instr .)


state 21

    (20) instruction -> compound_instr .

    PRINT           reduce using rule 20 (instruction -> compound_instr .)
    ID              reduce using rule 20 (instruction -> compound_instr .)
    IF              reduce using rule 20 (instruction -> compound_instr .)
    WHILE           reduce using rule 20 (instruction -> compound_instr .)
    REPEAT          reduce using rule 20 (instruction -> compound_instr .)
    RETURN          reduce using rule 20 (instruction -> compound_instr .)
    BREAK           reduce using rule 20 (instruction -> compound_instr .)
    CONTINUE        reduce using rule 20 (instruction -> compound_instr .)
    {               reduce using rule 20 (instruction -> compound_instr .)
    $end            reduce using rule 20 (instruction -> compound_instr .)
    UNTIL           reduce using rule 20 (instruction -> compound_instr .)
    }               reduce using rule 20 (instruction -> compound_instr .)
    ELSE            reduce using rule 20 (instruction -> compound_instr .)


state 22

    (23) labeled_instr -> ID . : instruction
    (24) assignment -> ID . = expression ;

    :               shift and go to state 46
    =               shift and go to state 47


state 23
